--- a/01_intro/index.html
+++ b/01_intro/index.html
@@ -1,19 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<title>PS70: Intro to Digital Fabrication </title>
+<title>gardenia's ps70 documentation</title>
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet">
 <link href="../style.css" rel="stylesheet">
 
 
-<nav class="navbar navbar-expand-sm navbar-dark" style=" color: #EEE7E8;">
-  <div style="align-items: center; justify-content: center;" class="container-fluid">
-    <div class="flexrow">
-      <h2 class="nav-title">PS70 Fall 2024</h2>
+<nav class="navbar navbar-expand-sm" style="background-color: #dcdcdc;">
+  <div class="container-fluid">
+    <div class="navbar-header">
+      <h2 class="nav-title">ps70 fall 2025</h2>
     </div>
-    <div class="navbar-nav">
-      <h4><a class="nav-link" href="../index.html">Home</a></h4>
-      <h4><a class="nav-link" href="../about.html">About</a></h4>
+    <div class="navbar-links">
+      <a class="nav-link" href="../index.html">home</a>
+      <a class="nav-link" href="../about.html">about</a>
+      <a class="nav-link" href="../13_finalproject/index.html">final project</a>
     </div>
   </div>
 </nav>
