--- a/about.html
+++ b/about.html
@@ -1,19 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<title>PS70: Intro to Digital Fabrication </title>
+<title>gardenia's ps70 documentation</title>
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet">
 <link href="./style.css" rel="stylesheet">
 
 
-<nav class="navbar navbar-expand-sm navbar-dark" style=" color: #EEE7E8;">
-  <div style="align-items: center; justify-content: center;" class="container-fluid">
-    <div class="flexrow">
-      <h2 class="nav-title">PS70 Fall 2024</h2>
+<nav class="navbar navbar-expand-sm navbar-dark" style="color: #EEE7E8;">
+  <div class="container-fluid">
+    <div class="navbar-header">
+      <h2 class="nav-title">ps70 fall 2025</h2>
     </div>
-    <div class="navbar-nav">
-      <h4><a class="nav-link" href="./index.html">Home</a></h4>
-      <h4><a class="nav-link" href="./about.html">About</a></h4>
+    <div class="navbar-links">
+      <a class="nav-link" href="./index.html">home</a>
+      <a class="nav-link" href="./about.html">about</a>
+      <a class="nav-link" href="./13_finalproject/index.html">final project</a>
     </div>
   </div>
 </nav>
@@ -30,13 +31,11 @@
 <div class="center-row">
   <img src="./about-me-placeholder.jpg" alt="placeholder for you about me image">
   <p id="aboutme">
-    This is an about me! Here you can talking about the dorm you live in, what year you are, and what are you interested in.
+    hello! thank you for visiting my ps70 website! my name is gardenia, and i'm a junior at harvard studying computer science! i live in dunster house. some of favorite things include matcha, thrifting, and flowers. 
   </p>
 </div>
 <br></br>
-
-Hello there is more text here, feel free to go into more detail about stuff you are interested in as well. As well as place more
-images if you are interested in those things
+i was born and raised in austin, texas!
 <br></br>
 <img src="./generic-placeholder-image.jpg" alt="generic placeholder image">
 
