--- a/index.html
+++ b/index.html
@@ -1,19 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<title>PS70: Intro to Digital Fabrication </title>
+<title>gardenia's ps70 documentation</title>
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet">
   <link href="./style.css" rel="stylesheet">
 
-<nav class="navbar navbar-expand-sm navbar-dark" style="background-color: #dcdcdc; color: #EEE7E8;">
-  <div style="align-items: center; justify-content: center;" class="container-fluid">
-    <div class="flexrow">
-      <h2 class="nav-title">PS70 Fall 2024</h2>
+<nav class="navbar navbar-expand-sm" style="background-color: #dcdcdc;">
+  <div class="container-fluid">
+    <div class="navbar-header">
+      <h2 class="nav-title">ps70 fall 2025</h2>
     </div>
-    <div class="navbar-nav">
-      <h4><a class="nav-link" href="./index.html">Home</a></h4>
-      <h4><a class="nav-link" href="./about.html">About</a></h4>
-      <h4><a class="nav-link" href="./13_finalproject/index.html">Final Project</a></h4>
+    <div class="navbar-links">
+      <a class="nav-link" href="./index.html">home</a>
+      <a class="nav-link" href="./about.html">about</a>
+      <a class="nav-link" href="./13_finalproject/index.html">final project</a>
     </div>
   </div>
 </nav>
@@ -26,54 +26,55 @@
   
   <div class="row">
     <div class="col-sm-4">
-      <image style = "width: 75%"src = "./01_intro/week1-placeholder-image.jpg" alt = "week 1 placeholder"> </image>
-      <br>[Week 1: Intro](./01_intro/index.html)
+      <image style = "width: 75%"src = "./01_intro/week1-placeholder-image.jpg" alt = "week 1: introduction"> </image>
+      <br>[week 1: intro](./01_intro/index.html)
     </div>
     <div class="col-sm-4">
-      <image style = "width: 75%"src = "./02_2Ddesign/week2-placeholder-image.jpg" alt = "week 2 placeholder"> </image>
-      <br>[Week 2: 2D Design](./02_2Ddesign/index.html)
+      <image style = "width: 75%"src = "./02_2Ddesign/week2-placeholder-image.jpg" alt = "week 2: 2d design"> </image>
+      <br>[week 2: 2d design](./02_2Ddesign/index.html)
     </div>
     <div class="col-sm-4">
-      <image style = "width: 75%"src = "./03_fabrication/week3-placeholder-image.jpg" alt = "week 3 placeholder"> </image>
-      <br>[Week 3: Fabrication](./03_fabrication/index.html)
+      <image style = "width: 75%"src = "./03_fabrication/week3-placeholder-image.jpg" alt = "week 3: fabrication"> </image>
+      <br>[week 3: fabrication](./03_fabrication/index.html)
+    </div>
+  </div>
+  <br>
+  <div class="row">
+    <div class="col-sm-4">
+      <image style = "width: 75%"src = "./04_microcontroller/week4-placeholder-image.jpg" alt = "week 4: programming"> </image> 
+      <br>[week 4: programming](./04_microcontroller/index.html)
+    </div>
+    <div class="col-sm-4">
+      <image style = "width: 75%"src = "./05_3Ddesign/week5-placeholder-image.jpg" alt = "week 5: 3d design"> </image>
+      <br>[week 5: 3d design](./05_3Ddesign/index.html)
+    </div>
+    <div class="col-sm-4">
+      <image style = "width: 75%"src = "./06_inputs/week6-placeholder-image.jpg" alt = "week 6: inputs"> </image>
+      <br>[week 6: inputs](./06_inputs/index.html)
     </div>
   </div>
   <div class="row">
     <div class="col-sm-4">
-      <image style = "width: 75%"src = "./04_microcontroller/week4-placeholder-image.jpg" alt = "week 4 placeholder"> </image> 
-      <br>[Week 4: Programming](./04_microcontroller/index.html)
+      <image style = "width: 75%"src = "./07_outputs/week7-placeholder-image.jpg" alt = "week 7: outputs"> </image>
+      <br>[week 7: outputs](./07_outputs/index.html)
     </div>
     <div class="col-sm-4">
-      <image style = "width: 75%"src = "./05_3Ddesign/week5-placeholder-image.jpg" alt = "week 5 placeholder"> </image>
-      <br>[Week 5: 3D Design](./05_3Ddesign/index.html)
+      <image style = "width: 75%"src = "./08_cnc/week8-placeholder-image.jpg" alt = "week 8: cnc"> </image>
+      <br>[week 8: cnc](./08_cnc/index.html)
     </div>
     <div class="col-sm-4">
-      <image style = "width: 75%"src = "./06_inputs/week6-placeholder-image.jpg" alt = "week 6 placeholder"> </image>
-      <br>[Week 6: Inputs](./06_inputs/index.html)
-    </div>
-  </div>
-  <div class="row">
-    <div class="col-sm-4">
-      <image style = "width: 75%"src = "./07_outputs/week7-placeholder-image.jpg" alt = "week 7 placeholder"> </image>
-      <br>[Week 7: Outputs](./07_outputs/index.html)
-    </div>
-    <div class="col-sm-4">
-      <image style = "width: 75%"src = "./08_cnc/week8-placeholder-image.jpg" alt = "week 8 placeholder"> </image>
-      <br>[Week 8: CNC](./08_cnc/index.html)
-    </div>
-    <div class="col-sm-4">
-      <image style = "width: 75%"src = "./09_networking/week9-placeholder-image.jpg" alt = "week 9 placeholder"> </image>
-      <br>[Week 9: Networking](./09_networking/index.html)
+      <image style = "width: 75%"src = "./09_networking/week9-placeholder-image.jpg" alt = "week 9: networking"> </image>
+      <br>[week 9: networking](./09_networking/index.html)
     </div>
   </div>
   <div class="row">
     <div class="col-sm-4">
-      <image style = "width: 75%"src = "./10_machine/machine-placeholder-image.jpg" alt = "machine building placeholder"> </image>
-      <br>[Machine Building](./10_machine/index.html)
+      <image style = "width: 75%"src = "./10_machine/machine-placeholder-image.jpg" alt = "machine building"> </image>
+      <br>[machine building](./10_machine/index.html)
     </div>
     <div class="col-sm-4">
-      <image style = "width: 75%"src = "./13_finalproject/final-project-placeholder-image.jpg" alt = "final project placeholder"> </image> 
-      <br>[Final Project](./13_finalproject/index.html)
+      <image style = "width: 75%"src = "./13_finalproject/final-project-placeholder-image.jpg" alt = "final project"> </image> 
+      <br>[final project](./13_finalproject/index.html)
     </div>
   </div>
 </div>
