styling, initial final proj ideas, about page

--- a/01_intro/index.html
+++ b/01_intro/index.html
@@ -6,7 +6,7 @@
 <link href="../style.css" rel="stylesheet">
 
 
-<nav class="navbar navbar-expand-sm" style="background-color: #dcdcdc;">
+<nav class="navbar navbar-expand-sm" style="background-color: #ffffff;">
   <div class="container-fluid">
     <div class="navbar-header">
       <h2 class="nav-title">ps70 fall 2025</h2>
@@ -24,33 +24,71 @@
 <div class="textcontainer">
 <br></br>
 
-<h3>Week 1: Final Project Proposal</h3>
+<h3>week 1: final project proposal</h3>
 
 <p class = "margin"></p>
-Here are at most 3 ideas for my final project
+i have 2 ideas for my final project:
 <p class = "margin"></p>
 
-<h4>Idea 1 : [INSERT IDEA 1]</h4>
+<h4>idea 1 : blooming flower dress </h4>
 <p class = "margin"></p>
 
-Idea 1 description
+i really enjoy fashion and outfits, and i would love to design and create a 
+clothing garment that i could actually wear. i recently discovered designer 
+cameron hughes’s futuristic dresses, and i find his work really inspiring. i 
+want to create a similar kind of wearable clothing item that combines elegance, 
+movement, and technology.
+
+<br>
+here is some of his work: 
+https://www.vogue.com/article/cameron-hughes-tiktok-designer-futuristic 
+
+<br>
+
+the garment i’m imagining would be inspired by a flower. the skirt would be 
+made up of petal-like panels that open and close, mimicking the natural blooming
+of a flower. possible flower inspirations could include gardenias, orchids, or 
+lilies, since since those are my favorite flowers! they also have separated petals
+that would translate well into a mechanical garment.
+
+<br>
+<br>
+
+i'm thinking the fabric could either be 3D printed or sewn somehow or be built from 
+wire and vacuum-suctioned materials. for the electronic component, i would probably use 
+some sort of motor to control the opening and closing of each petal. i would program the petals 
+to open and close at the same time, so that it looks like the dress is blooming. i'm not sure 
+how this movement could be triggered, but i was thinking of using a button or a sensor. 
+
+<br>
+<br>
+
+a stretch goal would be to also incorporate lights into the outfit. these lights could turn on 
+when the dress begins to open, which would make it look like the dress is glowing while blooming.
+
+<br>
+<br>
+below, i've included some inspiration sketches and photos. 
 
 <p class = "margin"></p>
 
 
-<h4>Idea 2: [INSERT IDEA 2]</h4>
+<h4>idea 2: matcha maker</h4>
 <p class = "margin"></p>
 
-Idea 2 Description
+i love matcha, and i think it would be cool to create a device that could make matcha for me. 
+the machine would have some 3D stand that holds a bowl and a handle to hold the whisk. for the 
+whisking motion, a motor could be used to rotate the whisk at a constant speed and in a "W" motion
+to froth up the matcha. a timer or potentially computer vision could detect when the whisking is 
+complete, and the machine could stop the motor. i would need to program the timing and speed of the 
+whisking motion, as well as the detection of when the whisking is complete. 
 
-<p class = "margin"></p>
-
-<h4>Idea 3: [INSERT IDEA 3]</h4>
-<p class = "margin"></p>
-
-Idea 3 Description
-
-
+<br>
+<br>
+a difficulty with this is that it may be too difficult for the machine to carry out the whole matcha 
+making process and may only be able to handle the whisking part, when the matcha powder and water
+is already added to the bowl. if this is the case, i don't think this idea is that appealing compared
+to my first idea. 
 
 </div>
 </xmp>
