--- a/about.html
+++ b/about.html
@@ -6,7 +6,7 @@
 <link href="./style.css" rel="stylesheet">
 
 
-<nav class="navbar navbar-expand-sm navbar-dark" style="color: #EEE7E8;">
+<nav class="navbar navbar-expand-sm" style="background-color: #ffffff;">
   <div class="container-fluid">
     <div class="navbar-header">
       <h2 class="nav-title">ps70 fall 2025</h2>
@@ -25,28 +25,21 @@
 
 
 
-<h3>About Me</h3>
+<h3>about me</h3>
 
 <p class="margin">   </p>
 <div class="center-row">
-  <img src="./about-me-placeholder.jpg" alt="placeholder for you about me image">
+  <img src="./about-me.jpg" alt="about me image" style="width: 50%;">
   <p id="aboutme">
-    hello! thank you for visiting my ps70 website! my name is gardenia, and i'm a junior at harvard studying computer science! i live in dunster house. some of favorite things include matcha, thrifting, and flowers. 
+    hello! thanks for visiting my ps70 website! my name is gardenia, and i'm a junior at harvard studying computer science! i live in dunster house. 
+    i was born and raised in austin, texas! some of favorite things include matcha, thrifting, and flowers. feel free to contact me by email at gardenialiu@college.harvard.edu!
+    <br><br>
+    this is my documentation site for <a href="https://nathanmelenbrink.github.io/ps70/" style="color: #2e8b57;">ps70: introduction to digital fabrication</a> for the fall 2025 semester!
   </p>
 </div>
 <br></br>
-i was born and raised in austin, texas!
-<br></br>
-<img src="./generic-placeholder-image.jpg" alt="generic placeholder image">
 
 <br></br>
-Maybe even add a video?
-<br></br>
-
-<video width="640" height="480" controls>
-  <source src="temp-video.mp4" type="video/mp4">
-</video>
-
 
 </div>
 </xmp>
