--- a/13_finalproject/index.html
+++ b/13_finalproject/index.html
@@ -6,7 +6,7 @@
 <link href="../style.css" rel="stylesheet">
 
 
-<nav class="navbar navbar-expand-sm" style="background-color: #dcdcdc;">
+<nav class="navbar navbar-expand-sm" style="background-color: #ffffff;">
   <div class="container-fluid">
     <div class="navbar-header">
       <h2 class="nav-title">ps70 fall 2025</h2>
