--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet">
   <link href="./style.css" rel="stylesheet">
 
-<nav class="navbar navbar-expand-sm" style="background-color: #dcdcdc;">
+<nav class="navbar navbar-expand-sm" style="background-color: #ffffff;">
   <div class="container-fluid">
     <div class="navbar-header">
       <h2 class="nav-title">ps70 fall 2025</h2>
@@ -23,57 +23,55 @@
 <xmp style="display:none;">
 
 <div class="container-fluid bg-3 text-center">
-  
-  <div class="row">
+  <div class="row" style="margin-top: 30px; margin-bottom: 30px;">
     <div class="col-sm-4">
-      <image style = "width: 75%"src = "./01_intro/week1-placeholder-image.jpg" alt = "week 1: introduction"> </image>
+      <image style="width: 75%; margin-bottom: 10px;" src="./01_intro/week1-placeholder-image.jpg" alt="week 1: introduction"> </image>
       <br>[week 1: intro](./01_intro/index.html)
     </div>
     <div class="col-sm-4">
-      <image style = "width: 75%"src = "./02_2Ddesign/week2-placeholder-image.jpg" alt = "week 2: 2d design"> </image>
+      <image style="width: 75%; margin-bottom: 10px;" src="./02_2Ddesign/week2-placeholder-image.jpg" alt="week 2: 2d design"> </image>
       <br>[week 2: 2d design](./02_2Ddesign/index.html)
     </div>
     <div class="col-sm-4">
-      <image style = "width: 75%"src = "./03_fabrication/week3-placeholder-image.jpg" alt = "week 3: fabrication"> </image>
+      <image style="width: 75%; margin-bottom: 10px;" src="./03_fabrication/week3-placeholder-image.jpg" alt="week 3: fabrication"> </image>
       <br>[week 3: fabrication](./03_fabrication/index.html)
     </div>
   </div>
-  <br>
-  <div class="row">
+  <div class="row" style="margin-bottom: 30px;">
     <div class="col-sm-4">
-      <image style = "width: 75%"src = "./04_microcontroller/week4-placeholder-image.jpg" alt = "week 4: programming"> </image> 
+      <image style="width: 75%; margin-bottom: 10px;" src="./04_microcontroller/week4-placeholder-image.jpg" alt="week 4: programming"> </image> 
       <br>[week 4: programming](./04_microcontroller/index.html)
     </div>
     <div class="col-sm-4">
-      <image style = "width: 75%"src = "./05_3Ddesign/week5-placeholder-image.jpg" alt = "week 5: 3d design"> </image>
+      <image style="width: 75%; margin-bottom: 10px;" src="./05_3Ddesign/week5-placeholder-image.jpg" alt="week 5: 3d design"> </image>
       <br>[week 5: 3d design](./05_3Ddesign/index.html)
     </div>
     <div class="col-sm-4">
-      <image style = "width: 75%"src = "./06_inputs/week6-placeholder-image.jpg" alt = "week 6: inputs"> </image>
+      <image style="width: 75%; margin-bottom: 10px;" src="./06_inputs/week6-placeholder-image.jpg" alt="week 6: inputs"> </image>
       <br>[week 6: inputs](./06_inputs/index.html)
     </div>
   </div>
-  <div class="row">
+  <div class="row" style="margin-bottom: 30px;">
     <div class="col-sm-4">
-      <image style = "width: 75%"src = "./07_outputs/week7-placeholder-image.jpg" alt = "week 7: outputs"> </image>
+      <image style="width: 75%; margin-bottom: 10px;" src="./07_outputs/week7-placeholder-image.jpg" alt="week 7: outputs"> </image>
       <br>[week 7: outputs](./07_outputs/index.html)
     </div>
     <div class="col-sm-4">
-      <image style = "width: 75%"src = "./08_cnc/week8-placeholder-image.jpg" alt = "week 8: cnc"> </image>
+      <image style="width: 75%; margin-bottom: 10px;" src="./08_cnc/week8-placeholder-image.jpg" alt="week 8: cnc"> </image>
       <br>[week 8: cnc](./08_cnc/index.html)
     </div>
     <div class="col-sm-4">
-      <image style = "width: 75%"src = "./09_networking/week9-placeholder-image.jpg" alt = "week 9: networking"> </image>
+      <image style="width: 75%; margin-bottom: 10px;" src="./09_networking/week9-placeholder-image.jpg" alt="week 9: networking"> </image>
       <br>[week 9: networking](./09_networking/index.html)
     </div>
   </div>
-  <div class="row">
+  <div class="row" style="margin-bottom: 30px;">
     <div class="col-sm-4">
-      <image style = "width: 75%"src = "./10_machine/machine-placeholder-image.jpg" alt = "machine building"> </image>
+      <image style="width: 75%; margin-bottom: 10px;" src="./10_machine/machine-placeholder-image.jpg" alt="machine building"> </image>
       <br>[machine building](./10_machine/index.html)
     </div>
     <div class="col-sm-4">
-      <image style = "width: 75%"src = "./13_finalproject/final-project-placeholder-image.jpg" alt = "final project"> </image> 
+      <image style="width: 75%; margin-bottom: 10px;" src="./13_finalproject/final-project-placeholder-image.jpg" alt="final project"> </image> 
       <br>[final project](./13_finalproject/index.html)
     </div>
   </div>
