--- a/01_intro/index.html
+++ b/01_intro/index.html
@@ -27,7 +27,7 @@
 <h3>week 1: final project proposal</h3>
 
 <p class = "margin"></p>
-i have 2 ideas for my final project:
+i have 2 ideas for my final project: a blooming flower dress and a matcha maker. 
 <p class = "margin"></p>
 
 <h4>idea 1 : blooming flower dress </h4>
@@ -40,10 +40,13 @@ want to create a similar kind of wearable clothing item that combines elegance,
 movement, and technology.
 
 <br>
+<br>
 here is some of his work: 
 https://www.vogue.com/article/cameron-hughes-tiktok-designer-futuristic 
 
 <br>
+<br>
+
 
 the garment i’m imagining would be inspired by a flower. the skirt would be 
 made up of petal-like panels that open and close, mimicking the natural blooming
@@ -70,12 +73,19 @@ when the dress begins to open, which would make it look like the dress is glowin
 <br>
 below, i've included some inspiration sketches and photos. 
 
+
+<div style="text-align: center;">
+  <img src="inspo.jpg" alt="inspiration image for flower dress" style="max-width: 60%; margin: 20px auto;">
+  <img src="inspo2.jpg" alt="brainstorming for flower dress" style="max-width: 60%; margin: 20px auto;">
+</div>
+
 <p class = "margin"></p>
 
 
 <h4>idea 2: matcha maker</h4>
 <p class = "margin"></p>
 
+<div style="font-size: 20px; line-height: 1.8;">
 i love matcha, and i think it would be cool to create a device that could make matcha for me. 
 the machine would have some 3D stand that holds a bowl and a handle to hold the whisk. for the 
 whisking motion, a motor could be used to rotate the whisk at a constant speed and in a "W" motion
@@ -85,10 +95,12 @@ whisking motion, as well as the detection of when the whisking is complete.
 
 <br>
 <br>
-a difficulty with this is that it may be too difficult for the machine to carry out the whole matcha 
+
+a challenge with this is that it may be too difficult for the machine to carry out the whole matcha 
 making process and may only be able to handle the whisking part, when the matcha powder and water
 is already added to the bowl. if this is the case, i don't think this idea is that appealing compared
 to my first idea. 
+</div>
 
 </div>
 </xmp>
