--- a/index.html
+++ b/index.html
@@ -25,58 +25,102 @@
 <div class="container-fluid bg-3 text-center">
   <!-- Row 1 -->
   <div class="row" style="margin-top: 30px; margin-bottom: 30px;">
-    <div class="col-sm-4">
-      <image style="width: 75%; margin-bottom: 10px;" src="./01_intro/cover.png" alt="week 1: introduction"> </image>
-      <br>[week 1: intro](./01_intro/index.html)
+    <div class="col-sm-4 mb-4">
+      <div class="card h-100 shadow-sm">
+        <img src="./01_intro/cover.png" class="card-img-top" alt="week 1: introduction">
+        <div class="card-body text-center">
+          <a href="./01_intro/index.html" class="btn btn-outline-secondary btn-pink-outline">week 1: introduction</a>
+        </div>
+      </div>
     </div>
-    <div class="col-sm-4">
-      <image style="width: 75%; margin-bottom: 10px;" src="./02_2Ddesign/cover2.png" alt="week 2: 2d design"> </image>
-      <br>[week 2: 2d design](./02_2Ddesign/index.html)
+    <div class="col-sm-4 mb-4">
+      <div class="card h-100 shadow-sm">
+        <img src="./02_2Ddesign/cover2.png" class="card-img-top" alt="week 2: 2d design">
+        <div class="card-body text-center">
+          <a href="./02_2Ddesign/index.html" class="btn btn-outline-secondary btn-pink-outline">week 2: 2d design</a>
+        </div>
+      </div>
     </div>
-    <div class="col-sm-4">
-      <image style="width: 75%; margin-bottom: 10px;" src="./03_fabrication/cover3.png" alt="week 3: fabrication"> </image>
-      <br>[week 3: fabrication](./03_fabrication/index.html)
+    <div class="col-sm-4 mb-4">
+      <div class="card h-100 shadow-sm">
+        <img src="./03_fabrication/cover3.png" class="card-img-top" alt="week 3: fabrication">
+        <div class="card-body text-center">
+          <a href="./03_fabrication/index.html" class="btn btn-outline-secondary btn-pink-outline">week 3: fabrication</a>
+        </div>
+      </div>
     </div>
   </div>
   <!-- Row 2 -->
   <div class="row" style="margin-bottom: 30px;">
-    <div class="col-sm-4">
-      <image style="width: 75%; margin-bottom: 10px;" src="./04_microcontroller/cover4.png" alt="week 4: programming"> </image> 
-      <br>[week 4: programming](./04_microcontroller/index.html)
+    <div class="col-sm-4 mb-4">
+      <div class="card h-100 shadow-sm">
+        <img src="./04_microcontroller/cover4.png" class="card-img-top" alt="week 4: programming">
+        <div class="card-body text-center">
+          <a href="./04_microcontroller/index.html" class="btn btn-outline-secondary btn-pink-outline">week 4: programming</a>
+        </div>
+      </div>
     </div>
-    <div class="col-sm-4">
-      <image style="width: 75%; margin-bottom: 10px;" src="./05_3Ddesign/cover5.png" alt="week 5: 3d design"> </image>
-      <br>[week 5: 3d design](./05_3Ddesign/index.html)
+    <div class="col-sm-4 mb-4">
+      <div class="card h-100 shadow-sm">
+        <img src="./05_3Ddesign/cover5.png" class="card-img-top" alt="week 5: 3d design">
+        <div class="card-body text-center">
+          <a href="./05_3Ddesign/index.html" class="btn btn-outline-secondary btn-pink-outline">week 5: 3d design</a>
+        </div>
+      </div>
     </div>
-    <div class="col-sm-4">
-      <image style="width: 75%; margin-bottom: 10px;" src="./06_inputs/cover6.png" alt="week 6: inputs"> </image>
-      <br>[week 6: inputs](./06_inputs/index.html)
+    <div class="col-sm-4 mb-4">
+      <div class="card h-100 shadow-sm">
+        <img src="./06_inputs/cover6.png" class="card-img-top" alt="week 6: inputs">
+        <div class="card-body text-center">
+          <a href="./06_inputs/index.html" class="btn btn-outline-secondary btn-pink-outline">week 6: inputs</a>
+        </div>
+      </div>
     </div>
   </div>
   <!-- Row 3 -->
   <div class="row" style="margin-bottom: 30px;">
-    <div class="col-sm-4">
-      <image style="width: 75%; margin-bottom: 10px;" src="./07_outputs/cover7.png" alt="week 7: outputs"> </image>
-      <br>[week 7: outputs](./07_outputs/index.html)
+    <div class="col-sm-4 mb-4">
+      <div class="card h-100 shadow-sm">
+        <img src="./07_outputs/cover7.png" class="card-img-top" alt="week 7: outputs">
+        <div class="card-body text-center">
+          <a href="./07_outputs/index.html" class="btn btn-outline-secondary btn-pink-outline">week 7: outputs</a>
+        </div>
+      </div>
     </div>
-    <div class="col-sm-4">
-      <image style="width: 75%; margin-bottom: 10px;" src="./08_cnc/cover8.png" alt="week 8: cnc"> </image>
-      <br>[week 8: cnc](./08_cnc/index.html)
+    <div class="col-sm-4 mb-4">
+      <div class="card h-100 shadow-sm">
+        <img src="./08_cnc/cover8.png" class="card-img-top" alt="week 8: cnc">
+        <div class="card-body text-center">
+          <a href="./08_cnc/index.html" class="btn btn-outline-secondary btn-pink-outline">week 8: cnc</a>
+        </div>
+      </div>
     </div>
-    <div class="col-sm-4">
-      <image style="width: 75%; margin-bottom: 10px;" src="./09_networking/cover9.png" alt="week 9: networking"> </image>
-      <br>[week 9: networking](./09_networking/index.html)
+    <div class="col-sm-4 mb-4">
+      <div class="card h-100 shadow-sm">
+        <img src="./09_networking/cover9.png" class="card-img-top" alt="week 9: networking">
+        <div class="card-body text-center">
+          <a href="./09_networking/index.html" class="btn btn-outline-secondary btn-pink-outline">week 9: networking</a>
+        </div>
+      </div>
     </div>
   </div>
   <!-- Row 4 -->
   <div class="row" style="margin-bottom: 30px;">
-    <div class="col-sm-4">
-      <image style="width: 75%; margin-bottom: 10px;" src="./10_machine/cover10.png" alt="machine building"> </image>
-      <br>[machine building](./10_machine/index.html)
+    <div class="col-sm-4 mb-4">
+      <div class="card h-100 shadow-sm">
+        <img src="./10_machine/cover10.png" class="card-img-top" alt="machine building">
+        <div class="card-body text-center">
+          <a href="./10_machine/index.html" class="btn btn-outline-secondary btn-pink-outline">machine building</a>
+        </div>
+      </div>
     </div>
-    <div class="col-sm-4">
-      <image style="width: 75%; margin-bottom: 10px;" src="./13_finalproject/cover13.png" alt="final project"> </image> 
-      <br>[final project](./13_finalproject/index.html)
+    <div class="col-sm-4 mb-4">
+      <div class="card h-100 shadow-sm">
+        <img src="./13_finalproject/cover13.png" class="card-img-top" alt="final project">
+        <div class="card-body text-center">
+          <a href="./13_finalproject/index.html" class="btn btn-outline-secondary btn-pink-outline">final project</a>
+        </div>
+      </div>
     </div>
     <div class="col-sm-4">
     </div>
