--- a/about.html
+++ b/about.html
@@ -38,6 +38,14 @@
   </p>
 </div>
 <br></br>
+as for some fun facts about me, i grew up doing solo and synchronized figure skating! i also used to have two pet mice, which could do tricks!
+
+<br></br>
+<div class="center-row" style="gap: 20px;">
+  <img src="./skating.jpeg" alt="figure skating" style="width: 45%;">
+  <img src="./mouse.JPG" alt="pet mice" style="width: 45%;">
+</div>
+
 
 <br></br>
 
