more pics and carousel

--- a/about.html
+++ b/about.html
@@ -41,9 +41,50 @@
 as for some fun facts about me, i grew up doing solo and synchronized figure skating! i also used to have two pet mice, which could do tricks!
 
 <br></br>
-<div class="center-row" style="gap: 20px;">
-  <img src="./skating.jpeg" alt="figure skating" style="width: 45%;">
-  <img src="./mouse.JPG" alt="pet mice" style="width: 45%;">
+<div class="row">
+  <div class="col-md-6">
+    <h5 class="text-center">figure skating</h5>
+    <div id="skatingCarousel" class="carousel slide" data-bs-ride="carousel">
+      <div class="carousel-inner">
+        <div class="carousel-item active">
+          <img src="./skating.jpg" class="d-block w-100" alt="figure skating">
+        </div>
+        <div class="carousel-item">
+          <img src="./skating3.jpg" class="d-block w-100" alt="figure skating">
+        </div>
+      </div>
+      <button class="carousel-control-prev" type="button" data-bs-target="#skatingCarousel" data-bs-slide="prev">
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Previous</span>
+      </button>
+      <button class="carousel-control-next" type="button" data-bs-target="#skatingCarousel" data-bs-slide="next">
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Next</span>
+      </button>
+    </div>
+  </div>
+  
+  <div class="col-md-6">
+    <h5 class="text-center">pet mice</h5>
+    <div id="miceCarousel" class="carousel slide" data-bs-ride="carousel">
+      <div class="carousel-inner">
+        <div class="carousel-item active">
+          <img src="./mouse2.jpg" class="d-block w-100" alt="pet mice">
+        </div>
+        <div class="carousel-item">
+          <img src="./mouse3.jpg" class="d-block w-100" alt="pet mice">
+        </div>
+      </div>
+      <button class="carousel-control-prev" type="button" data-bs-target="#miceCarousel" data-bs-slide="prev">
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Previous</span>
+      </button>
+      <button class="carousel-control-next" type="button" data-bs-target="#miceCarousel" data-bs-slide="next">
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Next</span>
+      </button>
+    </div>
+  </div>
 </div>
 
 
