week 2 assembly part

--- a/02_2Ddesign/index.html
+++ b/02_2Ddesign/index.html
@@ -162,9 +162,34 @@ since my final project will probably incorporate flowers of some sort.
 <br></br>
 
 <h4>assignment 3: fusion modeling</h4>
+<p>for this assignment, i created an assembly of stationery in fusion 360. 
+  i made a pencil, an eraser, and a thumbtack. some techniques i practiced were
+  extrude and fillet. i also colored these parts to be more realistic. 
+  
+  i used the below parameters:</p>
 
+<div class="row justify-content-center" style="margin-top: 20px; margin-bottom: 20px;">
+  <div class="col-md-6">
+    <img src="params.png" alt="fusion parameters" class="img-fluid" style="max-width: 80%;">
+  </div>
+</div>
 
+<p>here are photos of my final assembly:</p>
 
+<div class="row justify-content-center" style="margin-top: 20px; margin-bottom: 20px;">
+  <div class="col-md-6">
+    <img src="fusion1.png" alt="fusion assembly 1" class="img-fluid">
+  </div>
+  <div class="col-md-6">
+    <img src="fusion2.png" alt="fusion assembly 2" class="img-fluid">
+  </div>
+</div>
+
+<p class="margin">   </p>
+<div class="flexrow">
+  <a class="btn-download" href="./assembly.f3d" download>download assembly (f3d)</a>
+</div>
+<p class="margin">   </p>
 
   </div>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"></script>
