--- a/02_2Ddesign/index.html
+++ b/02_2Ddesign/index.html
@@ -61,11 +61,10 @@
 <h3>week 2: 2D design & cutting</h3>
 
 <h4>assignment 1: make a box</h4>
-the goal of this assignment is to get familiar with fusion 360 and how to use it to create a 2D design.
-i created a box with teeth to connect the sides. after modeling the structure and laser cutting it to ensure
-the dimensions were correct, i added some more details. i added many little cutouts onto the sides and also 
-my name on the front. below is my final design. 
-
+the purpose of this project was to get familiar with fusion 360 and practice creating a 2d design for laser cutting.
+i started by modeling a simple box with interlocking teeth along the edges to connect the panels. after cutting a 
+prototype to check the dimensions, i refined the design by adding details like small cutout patterns on the sides 
+and my name on the front.
 
 <div class="carousel-container">
   <div class="row justify-content-center" style="margin-top: 20px; margin-bottom: 20px;">
@@ -127,8 +126,9 @@ my name on the front. below is my final design.
   </div>
 </div>
 
-my box design features four wall panels and one bottom, connected by scoring and folding the cardboard. 
-"gardenia" is engraved onto one of the front walls, and the sides feature stars and cutout patterns. 
+the finished box has four wall panels and a bottom, connected by scoring and folding the cardboard. the front is 
+engraved with "gardenia," and the sides feature stars and other cutout designs.
+
 
 <p class="margin">   </p>
 <div class="flexrow">
