--- a/03_fabrication/index.html
+++ b/03_fabrication/index.html
@@ -24,9 +24,28 @@
 <div class="textcontainer">
 <p class="margin">   </p>
 
-<h3>Week 3: Hand Tools and Fabrication</h3>
+<h3>week 3: hand tools and fabrication</h3>
 
-<h4>Kinetic Sculpture</h4>
+<h4>final kinetic sculpture (blooming flower)</h4>
+<h4>process</h4>
+i began by sketching out some ideas for the flower shape and how it should move.
+i took inspiration from this video of a swing. based off this, it seemed like a similar
+mechanism could allow the flower petal to move back and forth. i went through a couple iterations, 
+shown below. 
+<br></br>
+then, i designed the component in fusion 360 to be laser cut. i wanted a simple shape to latch onto the 
+spinning part of the motor, so i measured the dimensions of the shape and put that in fusion 360. since
+i was unsure how the cardboard kerf would affect the final dimensions and i needed the cutout to fit
+very tightly, i laser cut a couple prototypes to check the dimensions. i also started out with TODO mm 
+cardboard. i realized that the laser would burn through part of the cardboard hole and the cardboard
+was too flimsy, so i opted for 6mm cardboard instead. 
+<br></br>
+once i had some prototypes, i played around with how the petal should move. i decided to use a thin wire
+to connect the petal to the spinning part of the motor. i then added a cutout in the base of the petal's stem
+so that the wire could fit through.
+, but eventually opted for 6mm for more structure. 
+<br></br>
+
 
 
 
