--- a/03_fabrication/index.html
+++ b/03_fabrication/index.html
@@ -26,7 +26,26 @@
 
 <h4>final kinetic sculpture (spinning waterlily)</h4>
 
+<div class="flexrow">
+  <div style="width:45%; margin:10px;">
+    <video width="100%" height="auto" controls>
+      <source src="spinning1.MOV" type="video/mp4">
+      your browser does not support HTML5 video.
+    </video>
+    <p class="caption">flower spinning - side view</p>
+  </div>
+  <div style="width:45%; margin:10px;">
+    <video width="100%" height="auto" controls>
+      <source src="spinning3.MOV" type="video/mp4">
+      your browser does not support HTML5 video.
+    </video>
+    <p class="caption">flower spinning - top view</p>
+  </div>
+</div>
 
+<p>
+here is the final kinetic sculpture in action. the flower petals spin around the central axis, creating an optical illusion of a full waterlily in bloom.
+</p>
 <h4>process</h4>
 <p>i went through many phases of brainstorming for this before i finally decided on this current iteration.
 for this final sculpture, i modeled it after a flower windmill, where spinning would create an optical 
@@ -41,7 +60,7 @@ illusion that the flower was full.</p>
 and the petals of the flower. i decided to keep the base pretty simple. i cut out a box that fits the motor
 and added additional pieces to make it look like the lily pad and leaves of a waterlily. for the motor and rod connection,
 i opted for a triangular stand that would fold up around the rod. as for the flower, i made cut out thin petals
-and a pistil to fit around the rod.</p>
+and a pistil to fit around the rod. these petal pieces are scored to create a curved shape. </p>
 
 
 <div class="center-row">
@@ -51,13 +70,6 @@ and a pistil to fit around the rod.</p>
   </div>
 </div>
 
-<p>
-the base is just a box that fits the protruding parts of the motor. this box is attached to a lilypad cutout. 
-then, i used a triangular structure with 3 pieces that fold upwards to secure the rod to the motor. the 
-petals of the flower have a hole cut out in the center so that the rod can fit through. these petal pieces are 
-scored to create a curved shape. 
-</p>
-
 
 <p class="margin">   </p>
 <div class="flexrow">
@@ -66,26 +78,6 @@ scored to create a curved shape.
 <p class="margin">   </p>
 
 <p>i was able to reuse some previous designs (later on this page) for connecting to the motor.</p>
-
-<h4>final result</h4>
-<p>here is the final kinetic sculpture in action. the flower petals spin around the central axis, creating an optical illusion of a full flower in bloom.</p>
-
-<div class="flexrow">
-  <div style="width:45%; margin:10px;">
-    <video width="100%" height="auto" controls>
-      <source src="spinning.MOV" type="video/mp4">
-      your browser does not support HTML5 video.
-    </video>
-    <p class="caption">flower spinning - side view</p>
-  </div>
-  <div style="width:45%; margin:10px;">
-    <video width="100%" height="auto" controls>
-      <source src="spinning2.MOV" type="video/mp4">
-      your browser does not support HTML5 video.
-    </video>
-    <p class="caption">flower spinning - top view</p>
-  </div>
-</div>
 
 
 <h4>previous idea</h4>
@@ -107,7 +99,11 @@ was too flimsy, so i opted for 6mm cardboard instead.</p>
 
 <p>once i had some prototypes, i played around with how the petal should move. i decided to use a thin wire
 to connect the petal to the spinning part of the motor. i then added a cutout in the base of the petal's stem
-so that the wire could fit through.</p>
+so that the wire could fit through, as shown in the photo below.</p>
+
+<div class="center-row">
+  <img src="four_petals.png" alt="four petals of the kinetic sculpture" style="width:60%; margin:20px 0;">
+</div>
 
 <p>i eventually also cut out multiple metals to create the flower, where the goal was to have 2 petals 
 be connected to the motor and move back and forth. by positioning these petals over the other petals, i hoped
